spade-tests/src/snapshots/spade_tests__usefulness__even_more_missing_enum_branch_errors.snap
---
source: spade-tests/src/usefulness.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: patterns X::B, X::C, X::D and 2 more not covered
   ┌─ testinput:11:5
   │  
11 │ ╭     match x {
12 │ │         X::A => true,
13 │ │     }
   │ ╰─────^ patterns X::B, X::C, X::D and 2 more not covered


