spade-tests/src/snapshots/spade_tests__usefulness__missing_boolean_patterns_work.snap
---
source: spade-tests/src/usefulness.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: pattern false not covered
  ┌─ testinput:2:5
  │  
2 │ ╭     match x {
3 │ │         true => true,
4 │ │     }
  │ ╰─────^ pattern false not covered


