spade-tests/src/snapshots/spade_tests__usefulness__missing_subpatterns_error_correctly.snap
---
source: spade-tests/src/usefulness.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: patterns X::A(a: false), X::A(a: true) not covered
  ┌─ testinput:7:5
  │  
7 │ ╭     match x {
8 │ │         X::B => true,
9 │ │     }
  │ ╰─────^ patterns X::A(a: false), X::A(a: true) not covered


