spade-tests/src/snapshots/spade_tests__usefulness__missing_tuple_patterns_error_correctly2.snap
---
source: spade-tests/src/usefulness.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: pattern (X::A, X::B) not covered
   ┌─ testinput:7:5
   │  
 7 │ ╭     match x {
 8 │ │         (X::A, X::A) => true,
 9 │ │         (X::B, _) => true,
10 │ │     }
   │ ╰─────^ pattern (X::A, X::B) not covered


