spade-tests/src/snapshots/spade_tests__usefulness__multiple_missing_enum_branch_errors.snap
---
source: spade-tests/src/usefulness.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: patterns X::B, X::C, X::D not covered
   ┌─ testinput:9:5
   │  
 9 │ ╭     match x {
10 │ │         X::A => true,
11 │ │     }
   │ ╰─────^ patterns X::B, X::C, X::D not covered


